Gjorde separat funktion av kod som gör om objekts nycklar till gemener, gjorde klart funktion populateFavorites men måste fixa interaktion med favorites.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <nav class="utility-bar">
                 <input type="search" class="utility-bar__searchbar" id="searchbar" placeholder="Find a movie...">
-                <a href="favorites.html" class="utility-bar__favorites-navigation-element" id="favoritesButton">Favorites</a>
+                <a class="utility-bar__favorites-navigation-element" id="favoritesButton">Favorites</a>
             </nav>
 
         <main class="main" id="main">
