--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
             <nav class="utility-bar">
                 <input type="search" class="utility-bar__searchbar" id="searchbar" placeholder="Find a movie...">
-                <a class="utility-bar__favorites-navigation-element" id="favoritesButton">Favorites</a>
+                <a href="favorites.html" class="utility-bar__favorites-navigation-element" id="favoritesButton">Favorites</a>
             </nav>
 
         <main class="main" id="main">
 
-            <section class="search-result-section d-none" id="searchResultSection"></section>
+
 
             <section class="trailer-section" id="trailerSection">
                 <h2 class="trailer-section__title">TRAILERS</h2>
@@ -38,10 +38,7 @@
                 </div>
             </section>
 
-            <section class="top-twenty-section" id="topTwentySection">
-                <h2 class="top-twenty-section__title">TOP TWENTY:</h2>
 
-            </section>
 
         </main>
 
