--- a/index.html
+++ b/index.html
@@ -6,43 +6,30 @@
     <link rel="stylesheet" href="/styles/style.css">
     <title>Movietime</title>
 </head>
-<body>
+<body>        
+    <div class="wrapper">
         <header class="header">
-            <h1 class="header__title">MovieTime</h1>
+            <h1 class="header__title">MOVIETIME</h1>
         </header>
-
-        <div class="wrapper">
-
+        <main class="main" id="main">
             <nav class="utility-bar">
                 <input type="search" class="utility-bar__searchbar" id="searchbar" placeholder="Find a movie...">
                 <a href="favorites.html" class="utility-bar__favorites-navigation-element" id="favoritesButton">Favorites</a>
             </nav>
 
-        <main class="main" id="main">
-
-
 
             <section class="trailer-section" id="trailerSection">
-                <h2 class="trailer-section__title">TRAILERS</h2>
+                <h2 class="trailer-section__title"><span class="trailer-section__title-background">TOP</span><span class="trailer-section__title-background">TRAILERS</span></h2>
 
-                <div class="trailer-section__videoplayer-wrapper">
-                    <div class="trailer-section__arrow-wrapper" id="leftArrow">
-                        <a class="trailer-section__arrow">&#9754;</a>
-                        <p class="trailer-section__direction-paragraph">BACK</p>
-                    </div>
                     <iframe title="trailer videoplayer" class="trailer-section__video-player" id="videoPlayer" src="" frameborder="0"></iframe>
-                    <div class="trailer-section__arrow-wrapper" id="rigthArrow">
-                        <a class="trailer-section__arrow">&#9755;</a>
-                        <p class="trailer-section__direction-paragraph">NEXT</p>
-                    </div>
-                </div>
+                    <button class="trailer-section__navigation-button trailer-section__navigation-button--left" id="previousTrailer">BACK</button>
+                    <button class="trailer-section__navigation-button trailer-section__navigation-button--right" id="nextTrailer">NEXT</button>
+
             </section>
-
-
-
         </main>
-
-
+        <footer class="footer">
+            <a class="footer__home-navigation" href="#">BACK TO TOP</a>
+        </footer>
     </div>
     <script type="module" src="./scripts/script.js"></script>
 </body>
