--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <h2 class="trailer-section__title"><span class="trailer-section__title-background">TOP</span><span class="trailer-section__title-background">TRAILERS</span></h2>
 
                     <iframe title="trailer videoplayer" class="trailer-section__video-player" id="videoPlayer" src="" frameborder="0"></iframe>
-                    <button class="trailer-section__navigation-button trailer-section__navigation-button--left" id="previousTrailer">BACK</button>
-                    <button class="trailer-section__navigation-button trailer-section__navigation-button--right" id="nextTrailer">NEXT</button>
+                    <button class="trailer-section__navigation-button trailer-section__navigation-button--left" id="previousTrailer">&#9754; BACK</button>
+                    <button class="trailer-section__navigation-button trailer-section__navigation-button--right" id="nextTrailer">NEXT &#9755;</button>
 
             </section>
         </main>
