Använder clip-path för att skapa mer intressanta boxar

--- a/favorites.html
+++ b/favorites.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <h1 class="header__title">MOVIETIME</h1>
+            <h1 class="header__title"><span class="header__title-span1">MY</span> <span class="header__title-span2">MOVIE</span> <span class="header__title-span3">DATABASE</span></h1>
         </header>
 
         
