--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>        
     <div class="wrapper">
         <header class="header">
-            <h1 class="header__title">MOVIETIME</h1>
+            <h1 class="header__title"><span class="header__title-span1">MY</span> <span class="header__title-span2">MOVIE</span> <span class="header__title-span3">DATABASE</span></h1>
         </header>
         <main class="main" id="main">
             <nav class="utility-bar">
@@ -19,11 +19,14 @@
 
 
             <section class="trailer-section" id="trailerSection">
-                <h2 class="trailer-section__title"><span class="trailer-section__title-background">TOP</span><span class="trailer-section__title-background">TRAILERS</span></h2>
+                <h2 class="trailer-section__title">
+                    <span class="trailer-section__title-background trailer-section__title-background--cream">TOP</span> 
+                    <span class="trailer-section__title-background trailer-section__title-background--orange">TRAILERS</span>
+                </h2>
 
                     <iframe title="trailer videoplayer" class="trailer-section__video-player" id="videoPlayer" src="" frameborder="0"></iframe>
-                    <button class="trailer-section__navigation-button trailer-section__navigation-button--left" id="previousTrailer">&#9754; BACK</button>
-                    <button class="trailer-section__navigation-button trailer-section__navigation-button--right" id="nextTrailer">NEXT &#9755;</button>
+                    <button class="trailer-section__navigation-button trailer-section__navigation-button--left" id="previousTrailer">&#10094; BACK</button>
+                    <button class="trailer-section__navigation-button trailer-section__navigation-button--right" id="nextTrailer">NEXT &#10095;</button>
 
             </section>
         </main>
