Sidan är mer responsiv, buggfixat pagination, ny scrollbar osv

--- a/favorites.html
+++ b/favorites.html
@@ -29,7 +29,7 @@
             <a class="footer__home-navigation" href="#">BACK TO TOP</a>
         </footer>
     </div>
-    <script type="module" src="./scripts/script.js"></script>
+    <script type="module" src="./scripts/app.js"></script>
 </body>
 
 </html>
