--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <iframe title="trailer videoplayer" class="trailer-section__video-player" id="videoPlayer" src=""
                     frameborder="0"></iframe>
                 <nav class="trailer-section__navigation-wrapper">
-                    <a class="trailer-section__navigation-button" id="previousTrailer">&#9664; BACK</a>
+                    <a class="trailer-section__navigation-button trailer-section__navigation-button--left" id="previousTrailer">&#9664; BACK</a>
                     <p class="trailer-section__trailer-counter" id="trailerCounter">1 / 5</p>
-                    <a class="trailer-section__navigation-button" id="nextTrailer">NEXT &#9654;</a>
+                    <a class="trailer-section__navigation-button trailer-section__navigation--right" id="nextTrailer">NEXT &#9654;</a>
                 </nav>
 
             </section>
@@ -44,7 +44,7 @@
             <a class="footer__home-navigation" href="#">BACK TO TOP</a>
         </footer>
     </div>
-    <script type="module" src="./scripts/script.js"></script>
+    <script type="module" src="./scripts/app.js"></script>
 </body>
 
 </html>
