sista commit innan inlämning

--- a/favorites.html
+++ b/favorites.html
@@ -10,26 +10,25 @@
 
 <body>
     <div class="wrapper">
+
         <header class="header">
-            <h1 class="header__title"><span class="header__title-span1">MY</span> <span
-                    class="header__title-span2">MOVIE</span> <span class="header__title-span3">DATABASE</span></h1>
+            <h1 class="header__title"><span class="header__title header__title--cream header__title--top">MY</span> <span
+                    class="header__title header__title--orange">MOVIE</span> <span class="header__title header__title--cream header__title--bottom">DATABASE</span></h1>
         </header>
+
         <nav class="utility-bar" id="utilityBar">
             <input type="search" class="utility-bar__searchbar" id="searchbar" placeholder="Find a movie...">
-            <a title="Go back home!" href="index.html" class="utility-bar__navigation-button" id="favoritesButton">Home</a>
+            <a title="Go back home!" href="../index.html" class="utility-bar__navigation-button"
+                id="favoritesButton">Home</a>
         </nav>
 
-        <main class="main" id="main">
-
-
-
-        </main>
+        <main class="main" id="main"></main>
 
         <footer class="footer">
             <a class="footer__home-navigation" href="#">BACK TO TOP</a>
         </footer>
     </div>
-    <script type="module" src="./scripts/app.js"></script>
+    <script type="module" src="scripts/app.js"></script>
 </body>
 
 </html>
